--- a/templates/plugin/AdminLTE/Admin/Bake/Template/view.twig
+++ b/templates/plugin/AdminLTE/Admin/Bake/Template/view.twig
@@ -6,7 +6,7 @@
 <section class="content-header">
     <h1>
         {{ singularHumanName }}
-        <small><?php echo __('View'); ?></small>
+        <small><?php echo __('Podgląd); ?></small>
     </h1>
     <ol class="breadcrumb">
         <li>
@@ -125,11 +125,11 @@
                                 {% endfor %}
                                 {% set otherPk = '$' ~ otherSingularVar ~ '->' ~ details.primaryKey[0] %}
                                 <td class="actions text-right">
-                                    <?= $this->Html->link(__('View'), ['controller' => '{{ details.controller }}',
+                                    <?= $this->Html->link(__('Podgląd'), ['controller' => '{{ details.controller }}',
                                     'action' => 'view', {{ otherPk|raw }}], ['class'=>'btn btn-info btn-xs']) ?>
-                                    <?= $this->Html->link(__('Edit'), ['controller' => '{{ details.controller }}',
+                                    <?= $this->Html->link(__('Edycja'), ['controller' => '{{ details.controller }}',
                                     'action' => 'edit', {{ otherPk|raw }}], ['class'=>'btn btn-warning btn-xs']) ?>
-                                    <?= $this->Form->postLink(__('Delete'), ['controller' => '{{ details.controller }}',
+                                    <?= $this->Form->postLink(__('Usuń'), ['controller' => '{{ details.controller }}',
                                     'action' => 'delete', {{ otherPk|raw }}], ['confirm' => __('Are you sure you want to
                                     delete # {0}?', {{ otherPk|raw }}), 'class'=>'btn btn-danger btn-xs']) ?>
                                 </td>
