--- a/templates/plugin/AdminLTE/Bake/Template/view.twig
+++ b/templates/plugin/AdminLTE/Bake/Template/view.twig
@@ -21,7 +21,7 @@
 <section class="content-header">
   <h1>
     {{ singularHumanName }}
-    <small><?php echo __('View'); ?></small>
+    <small><?php echo __('Podgląd'); ?></small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="<?php echo $this->Url->build(['action' => 'index']); ?>"><i class="fa fa-dashboard"></i> <?php echo __('Home'); ?></a></li>
@@ -128,9 +128,9 @@
   {% endfor %}
   {% set otherPk = '$' ~ otherSingularVar ~ '->' ~ details.primaryKey[0] %}
                   <td class="actions text-right">
-                      <?= $this->Html->link(__('View'), ['controller' => '{{ details.controller }}', 'action' => 'view', {{ otherPk|raw }}], ['class'=>'btn btn-info btn-xs']) ?>
-                      <?= $this->Html->link(__('Edit'), ['controller' => '{{ details.controller }}', 'action' => 'edit', {{ otherPk|raw }}], ['class'=>'btn btn-warning btn-xs']) ?>
-                      <?= $this->Form->postLink(__('Delete'), ['controller' => '{{ details.controller }}', 'action' => 'delete', {{ otherPk|raw }}], ['confirm' => __('Are you sure you want to delete # {0}?', {{ otherPk|raw }}), 'class'=>'btn btn-danger btn-xs']) ?>
+                      <?= $this->Html->link(__('Podgląd'), ['controller' => '{{ details.controller }}', 'action' => 'view', {{ otherPk|raw }}], ['class'=>'btn btn-info btn-xs']) ?>
+                      <?= $this->Html->link(__('Edycja'), ['controller' => '{{ details.controller }}', 'action' => 'edit', {{ otherPk|raw }}], ['class'=>'btn btn-warning btn-xs']) ?>
+                      <?= $this->Form->postLink(__('Usuń'), ['controller' => '{{ details.controller }}', 'action' => 'delete', {{ otherPk|raw }}], ['confirm' => __('Are you sure you want to delete # {0}?', {{ otherPk|raw }}), 'class'=>'btn btn-danger btn-xs']) ?>
                   </td>
               </tr>
               <?php endforeach; ?>
